crates/tsuno-driver/tests/fixtures/snapshots/pass/allows_ens_only_function_contract.rs
fn ens_only_contract() -> i32
//@ ens result == 3i32
{
    3
}

fn main() {
    let x = ens_only_contract();
    //@ assert {x} == 3i32;
}
