crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_call_inside_unsafe.rs
fn callee() -> i32 {
    1i32
}

fn rejects_call_inside_unsafe() {
    unsafe {
        let _x = callee();
    }
}

fn main() {}
